--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
             <li class="active"><a>Home</a></li>
             <li><a href="">View Cart</a></li>
           </ul>
+          <ul class="nav navbar-right">
+            <li><a style="decoration : none"><input type="text" class="form-control" placeholder="Search"></a></li>
+          </ul>
         </div>
       </div>
     </nav>
