--- a/public/admin/login/login.html
+++ b/public/admin/login/login.html
@@ -2,12 +2,13 @@
 <div class="container"  ng-controller = "AdminCtrl as admin">
 <h1> Admin Login </h1>
   <form role="form">
-    <div class="form-group">
+    <div class="form-group" ng-form>
       <input type="text" class="form-control" ng-model = "admin.user.name" placeholder="Username">
     </div>
     <div class="form-group">
       <input type="password" class="form-control" ng-model = "admin.user.password" placeholder="Password">
     </div>
+      <div ng-bind="admin.msg" style="color:red"></div>
     <a ng-click="admin.validate()" class="btn btn-default">Login</a>
   </form>
 </div>
