--- a/public/user/pizzaList/pizzaList.html
+++ b/public/user/pizzaList/pizzaList.html
@@ -1,33 +1,26 @@
 <div>
-  	<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div>
-          <ul class="nav navbar-nav">
-            <li class="active"><a>Home</a></li>
-            <li><a href="">View Cart</a></li>
-          </ul>
-          <!-- <ul class="nav navbar-right"> -->
-            <!-- <li><a><input type="text" class="form-control" ng-model = "query" placeholder="Search"></a></li> -->
-          <!-- </ul> -->
-        </div>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a>Home</a></li>
+          <li><a href="#/order">View Cart</a></li>
+        </ul>
       </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
+</div>
 
 <div class="container">
   <div class="jumbotron">
     <h2>Pizza Cart</h2>
   </div>
-    <input type="text" class="form-control" ng-model = "query" placeholder="Search">
-
+  <input type="text" class="form-control" ng-model = "query" placeholder="Search">
 </div>
 
-<div>
-<!-- <center><input type = "text" name="search" ng-model = "query" Placeholder="Search"></center> -->
-</div>
 <div class="img" ng-repeat="pizza in pizzaCtrl.list | filter:query | orderBy:'name'">
 	<a href = "#/pizza/{{pizza.name}}" style="text-decoration:none;">
-		<img ng-src="{{pizza.image}}" width="100">
+	  <img ng-src="{{pizza.image}}" width="100">
 	</a>
 	<br>{{pizza.name}}
 </div>
