implemented entire functionality

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="user/pizzaDetails/costService.js"></script>
     <script type="text/javascript" src="user/pizzaDetails/cartService.js"></script>
     <script type="text/javascript" src="user/viewCart/viewCartCtrl.js"></script>
+    <script type="text/javascript" src="user/userDetails/userDetailCtrl.js"></script>
     <script type="text/javascript" src="admin/admin.js"></script>
     <script type="text/javascript" src="admin/login/adminCtrl.js"></script>
     <script type="text/javascript" src="admin/view/SessionCtrl.js"></script>
