--- a/public/user/viewCart/viewCart.html
+++ b/public/user/viewCart/viewCart.html
@@ -15,7 +15,7 @@
         <li class="active"><a>Cart</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#/userdetails">Place Order</a></li>
+        <li><a href="" ng-click = "cartCtrl.placeOrder()">Place Order</a></li>
         <li><a>Total Amount:{{cartCtrl.total|currency:"&#8377;"}}/-</a></li>
       </ul>
     </div>
