--- a/public/user/pizzaList/pizzaList.html
+++ b/public/user/pizzaList/pizzaList.html
@@ -6,6 +6,9 @@
           <li class="active"><a>Home</a></li>
           <li><a href="#/order">View Cart</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#/admin">Admin Login</a></li>
+        </ul>
       </div>
     </div>
   </nav>
