--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <div ng-view></div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-route.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="user/user.js"></script>
     <script type="text/javascript" src="user/pizzaList/pizzaListCtrl.js"></script>
